---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: ????
  Changes:
    - Auto-exiting of Remote View to enter the Sandbox is possible in more cases
  Bugfixes:
    - Teleportations using Remote View work properly
    - Better detections for entering/exiting Sandboxes
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2024-11-23
  Changes:
    - Some Entities are available through a Selector that allows spawning them within an area
    - Tiles are available through a Selector that allows setting them within an area
    - Removed items/recipes for Tile Planners
    - Removed items/recipes for Resource Planners
---------------------------------------------------------------------------------------------------
Version: 2.1.8
Date: 2024-11-21
  Changes:
    - Maintaining icon consistency with base game
---------------------------------------------------------------------------------------------------
Version: 2.1.7
Date: 2024-11-18
  Changes:
    - Recipes intended only for the Sandboxes are now always toggled just in time
    - Item requests are now handled with the newer planning APIs
    - Failed ghost revives are added back into the queue
    - Ghost reviving queue now always runs, just in case
  Bugfixes:
    - Potentially reduced scenarios where pre-Sandbox character information is lost
---------------------------------------------------------------------------------------------------
Version: 2.1.6
Date: 2024-11-12
  Changes:
    - Cannot enter the Sandbox while using a jetpack
  Bugfixes:
    - UI now prefers to precede all others
    - Potentially resolved hidden recipes after updating while in a Sandbox
---------------------------------------------------------------------------------------------------
Version: 2.1.5
Date: 2024-11-02
  Changes:
    - Russian translations (thanks Kirill)
  Bugfixes: