@@ -1,11 +1,12 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.2.1
-Date: ????
+Date: 2024-11-26
   Changes:
     - Auto-exiting of Remote View to enter the Sandbox is possible in more cases
   Bugfixes:
     - Teleportations using Remote View work properly
     - Better detections for entering/exiting Sandboxes
+    - Decreased probability of losing the player's return character when exiting Sandboxes
 ---------------------------------------------------------------------------------------------------
 Version: 2.2.0
 Date: 2024-11-23
